--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,8 +17,6 @@ body {
   background: radial-gradient(ellipse at center, #232333 0%, #161616 100%);
   /* W3C */
   overflow: hidden; }
-  body span {
-    opacity: 0; }
   body h2 {
     font-size: 12px;
     font-weight: 300;
@@ -26,6 +24,15 @@ body {
     margin-bottom: 30px;
     opacity: 0.6;
     letter-spacing: 1px;
+    margin-top: -30px; }
+  body p {
+    font-size: 12.5px;
+    font-weight: 300;
+    color: white;
+    margin-bottom: 30px;
+    opacity: 0.6;
+    letter-spacing: 1px;
+    text-align: left;
     margin-top: -30px; }
   body nav {
     text-align: center;
@@ -39,7 +46,7 @@ body {
       text-decoration: none;
       font-weight: 300;
       margin: 5px;
-      font-size: 12px;
+      font-size: 12.5px;
       padding: 10px 20px;
       opacity: 0.5;
       text-align: center;
@@ -112,9 +119,18 @@ body {
       transform: scale(0.5);
       position: absolute;
       top: 30px;
-      left: 60px;
+      left: 10px;
       animation: logo_text .4s 1.1s forwards;
       opacity: 0; }
+
+  .rubyRt {
+    text-decoration: none; /* 去除下划线 */
+    color: rgb(114, 206, 255);
+  }
+  .rubyRt:hover {
+    color: rgb(19, 164, 243);
+    text-decoration: underline;
+  }
 
 @keyframes logo_right {
   0% {
@@ -160,4 +176,4 @@ body {
   0% {
     top: 50%; }
   100% {
-    top: 35%; } }
+    top: 30%; /*最后的位置变换*/} }
